Adds a route for retrieving the label of a remote cube
