# isis_cloud/server/routes/files.py
@@ -1,6 +1,7 @@
 from flask import request, send_from_directory
 from os.path import exists as path_exists, join as path_join
 from os import makedirs, remove
+from pvl import load as pvl_load
 
 from .._config import ISISServerConfig
 
@@ -20,6 +21,14 @@ def retrieve_file(file_name):
         return {"message": "File not found"}, 404
 
     return send_from_directory(ISISServerConfig.work_dir(), file_name)
+
+
+def retrieve_file_label(file_name):
+    file_path = path_join(ISISServerConfig.work_dir(), file_name.strip("/"))
+    if not path_exists(file_path):
+        return {"message": "File not found"}, 404
+
+    return pvl_load(file_path)
 
 
 def delete_file(file_name):
